--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<iframe src="https://discord.com/widget?id=1086988814683222067&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 <!-- lead section -->
 <div class="flex flex-wrap md:flex-row-reverse justify-center items-center text-center py-4">
     <div class="w-full lg:w-1/2">
